--- a/index.html
+++ b/index.html
@@ -1,18 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Hacker Snooze</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <style>
+    #submit-form, #login-form, #signup-form,
+    #logout, #show-submit, #show-favorites {
+      display: none;
+    }
+    .btn-primary {
+      background-color: rgb(233, 84, 31);
+      outline-color: rgb(233, 84, 31);
+      border-color: rgb(233, 84, 31);
+    }
+    .btn.btn-primary:hover {
+      background-color: rgb(209, 75, 27);
+      outline-color: rgb(209, 75, 27);
+      border-color: rgb(209, 75, 27);
+    }
+    .btn.btn-primary:active {
+      background-color: rgb(209, 75, 27);
+      outline-color: rgb(209, 75, 27);
+      border-color: rgb(209, 75, 27);
+    }
+    .form-control-warning:focus {
+      box-shadow: 0 0 0 0.2rem rgba(233, 84, 31, 0.25);
+      border-style: none;
+    }
+  </style>
 </head>
-
 <body>
-  <h1>Open up the chrome console!</h1>
-  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-  <script src="api-classes.js"></script>
+  <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #e9541f;">
+    <a href="#" class="navbar-brand"><b>Hack or Snooze</b></a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" id="show-submit" href="#">submit</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="show-favorites" href="#">favorites</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" id="show-login" href="#">login</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" id="show-signup" href="#">sign up</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" id="logout" href="#">logout</a>
+      </li>
+    </ul>
+  </nav>
+
+  <section class="container-fluid">
+  <!-- Submit new story form -->
+  <form class="my-4" id="submit-form">
+    <div class="form-group row">
+      <label for="title" class="col-1 col-form-label">title</label>
+      <div class="col-3">
+          <input type="text" class="form-control form-control-warning" id="title">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="url" class="col-1 col-form-label">url</label>
+      <div class="col-3">
+          <input type="url" class="form-control form-control-warning" id="url">
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">submit</button>
+  </form>
+
+  <!-- Login form -->
+  <form class="my-4" id="login-form">
+    <div class="form-group row">
+      <label for="login-username" class="col-1 col-form-label">username</label>
+      <div class="col-3">
+          <input id="login-username" type="text" class="form-control form-control-warning">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="login-password" class="col-1 col-form-label">password</label>
+      <div class="col-3">
+          <input id="login-password" type="password" class="form-control form-control-warning">
+      </div>
+    </div>
+    <button class="btn btn-primary">login</button>
+  </form>
+
+
+  <!-- Sign-up form -->
+  <form class="my-4" id="signup-form">
+      <div class="form-group row">
+        <label for="signup-name" class="col-1 col-form-label">name</label>
+        <div class="col-3">
+            <input id="signup-name" type="text" class="form-control form-control-warning">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="signup-username" class="col-1 col-form-label">username</label>
+        <div class="col-3">
+            <input id="signup-username" type="text" class="form-control form-control-warning">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="signup-password" class="col-1 col-form-label">password</label>
+        <div class="col-3">
+            <input id="signup-password" type="password" class="form-control form-control-warning">
+        </div>
+      </div>
+      <button class="btn btn-primary">sign-up</button>
+    </form>
+
+  <article class="mt-3" id="news">
+    <ol>
+    </ol>
+  </article>
+  </section>
+<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+<script src="api-classes.js"></script>
+<script src="presentation.js"></script>
 </body>
 
 </html>
