css update to margins

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <section class="container-fluid">
   <!-- Submit new story form -->
-  <form class="my-4" id="submit-form">
+  <form class="mt-4 mb-0" id="submit-form">
     <div class="form-group row">
       <label for="title" class="col-1 col-form-label">title</label>
       <div class="col-3">
@@ -77,7 +77,7 @@
   </form>
 
   <!-- Login form -->
-  <form class="my-4" id="login-form">
+  <form class="mt-4 mb-0" id="login-form">
     <div class="form-group row">
       <label for="login-username" class="col-1 col-form-label">username</label>
       <div class="col-3">
