--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
     </ol>
   </article>
   </section>
+
+  <!-- TODO: DESIGN USER PROFILE SECTION - HOW DO WE LOAD THIS IN?? -->
+
 <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script src="api-classes.js"></script>
 <script src="presentation.js"></script>
