--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <style>
     #submit-form, #login-form, #signup-form,
-    #logout, #show-submit, #show-favorites {
+    #logout, #show-submit, #show-favorites, #show-profile,
+    #profile {
       display: none;
+    }
+    .container {
+      background-color: #f6f6ef;
     }
     .btn-primary {
       background-color: rgb(233, 84, 31);
@@ -50,6 +54,10 @@
       
       <li class="nav-item">
         <a class="nav-link" id="show-signup" href="#">sign up</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" id="show-profile" href="#"></a>
       </li>
 
       <li class="nav-item">
@@ -124,6 +132,37 @@
   </section>
 
   <!-- TODO: DESIGN USER PROFILE SECTION - HOW DO WE LOAD THIS IN?? -->
+  <div class="container p-3 mt-5" id="profile">
+    <h3 class="text-center">Profile</h3>
+    <div class="row text-left">
+      <div class="col-1">
+        name:
+      </div> 
+      <div class="col-11" id="profile-name">
+      </div> 
+    </div>
+    <div class="row text-align-left">
+      <div class="col-1">
+        user:
+      </div> 
+      <div class="col-11" id="profile-username">
+      </div> 
+    </div>
+    <div class="row text-align-left">
+      <div class="col-1">
+      </div> 
+      <div class="col-11">
+        <a href="#" id="submission-link">submissions</a>
+      </div> 
+    </div>
+    <div class="row text-align-left">
+      <div class="col-1">
+      </div> 
+      <div class="col-11">
+        <a href="#" id="favorites-link">favorites</a>
+      </div> 
+    </div>
+  </div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script src="api-classes.js"></script>
