--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     #submit-form, #login-form, #signup-form,
     #logout, #show-submit, #show-favorites, #show-profile,
-    #profile {
+    #profile, #user-submissions {
       display: none;
     }
     .container {
@@ -125,12 +125,6 @@
       <button class="btn btn-primary">sign-up</button>
     </form>
 
-  <article class="mt-3" id="news">
-    <ol>
-    </ol>
-  </article>
-  </section>
-
   <!-- TODO: DESIGN USER PROFILE SECTION - HOW DO WE LOAD THIS IN?? -->
   <div class="container p-3 mt-5" id="profile">
     <h3 class="text-center">Profile</h3>
@@ -163,6 +157,22 @@
       </div> 
     </div>
   </div>
+
+ <!-- NEWS SECTION -->
+  <article class="mt-3" id="news">
+    <ol>
+    </ol>
+  </article>
+  </section>
+
+   <!-- USERS SUBMISSIONS -->
+  <article class="mt-3" id="user-submissions">
+    <h3 class="text-center">Your Submissions:</h3>
+    <br>
+    <ol>
+    </ol>
+  </article>
+  </section>
 
 <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script src="api-classes.js"></script>
